modernizer for presto-main